design is at a baseline

--- a/assets/scss/molecules/_card.scss
+++ b/assets/scss/molecules/_card.scss
@@ -1,25 +1,29 @@
 .card {
   @include makeColumn($size:12, $offset:0);
-  @include makeColumn(md, $size:5, $offset:1);
+  @include makeColumn(md, $size:6, $offset:0);
   @include makeColumn(lg, $size:3, $offset:0);
-  background-color: $off-white;
-  min-height: 26.5rem;
-  padding: 1.25rem 0.5rem;
-  border-bottom: 0.5rem solid $faded-red;
+  //background-color: $off-white;
+  //min-height: 24rem;
+  padding: 1.25rem 0rem;
+  //border-bottom: 0.5rem solid $faded-red;
   margin-bottom: 1.25rem;
+
+  @include breakpoint($medium) {
+    margin: 0rem 0rem 1.25rem 0rem;
+  }
 }
 
-.icon {
+/*.icon {
   position: relative;
   margin: 0 auto;
   max-width: $icon-max-width;
   padding-bottom: 1.25rem;
-}
+}*/
 
 .sevice_description_title {
   color: $faded-red;
   padding: 0 1.5rem;
-  text-align: center;
+  text-align: left;
 }
 
 .sevice_description {
