--- a/assets/scss/atoms/_text.scss
+++ b/assets/scss/atoms/_text.scss
@@ -7,10 +7,13 @@
 }
 
 h1 {
-    @include header(4rem);
+    @include header(3.25rem);
     margin: 0.75rem 0 1.75rem 0;
     text-align: center;
-    //padding: 0 1.5rem 0 1.5rem;
+
+    @include breakpoint($medium) {
+        font-size: 3.75rem;
+    }
 }
 
 h2 {
@@ -18,7 +21,6 @@ h2 {
     text-align: center;
     margin-top: 1.5rem 0;
     line-height: 2.75rem;
-    //padding: 1rem 0rem 0.5rem 0rem;
 }
 
 h3 {
