--- a/assets/scss/helpers/_global.scss
+++ b/assets/scss/helpers/_global.scss
@@ -4,7 +4,7 @@ html {
 
 body {
     @extend %primary-font-regular;
-    margin: 2rem 1.5rem;
+    margin: 0 1rem;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
