--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -8,14 +8,16 @@ $off-white: #fefefe;
 $charcoal: #36454f;
 $off-black: #231f20;
 $faded-red: #e36a6b;
+$yellow: #fdbb07;
 $gold: #faa81a;
 $gold-inverse-blue: #3681f7;
 
 // Global
-$body-background: #f5f5f5;
+$body-background: #232932;
 
 // Atoms
-$text-color: #999999;
+//$text-color: #999999;
+$text-color: $white;
 
 // Molecules
 $icon-max-width: 50%;
