--- a/assets/scss/pages/_home_page.scss
+++ b/assets/scss/pages/_home_page.scss
@@ -1,22 +1,24 @@
 .masthead_logo {
   @include makeColumn($size:4, $offset:4);
-  @include makeColumn(md, $size:2, $offset:5);
+  max-width: 5.5rem;
+  margin: 3rem auto 0.5rem auto;
+  padding: 0;
 }
 
 .offerings {
   @include makeRow($no-margin:true);
   padding: 0 0.25rem;
-  max-width: 1200px;
+  margin: 1rem auto;
 
   @include breakpoint($medium) {
-    margin: 0 auto;
+    max-width: 1100px;
   }
 }
 
 .contact {
-  width: 80%;
+  width: 90%;
   text-align: center;
-  margin: 2rem auto;
+  margin: 3rem auto 2rem auto;
   border-top: 1px solid $charcoal;
   padding-top: 2rem;
 }
