--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,43 +119,29 @@
   margin-left: 33.33333%; }
 
 @media only screen and (min-width: 768px) {
-  .masthead_logo {
-    flex-basis: 16.66667%;
-    max-width: 16.66667%;
-    -webkit-flex-basis: 16.66667%; }
   .card {
     flex-basis: 50%;
     max-width: 50%;
     -webkit-flex-basis: 50%; }
   .card {
-    margin-left: 0%; }
-  .masthead_logo {
-    margin-left: 41.66667%; } }
-
-@media only screen and (min-width: 1015px) {
-  .card {
-    flex-basis: 25%;
-    max-width: 25%;
-    -webkit-flex-basis: 25%; }
-  .card {
     margin-left: 0%; } }
 
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
-  color: #999999;
+  color: #ffffff;
   -webkit-font-smoothing: antialiased; }
 
 html {
   font-size: 16px; }
 
 body {
-  margin: 2rem 1.5rem;
+  margin: 0 1rem;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   display: -webkit-flex;
   -webkit-flex-direction: column;
-  background-color: #f5f5f5; }
+  background-color: #232932; }
 
 code {
   display: block;
@@ -176,18 +162,21 @@ main {
   flex: 1; }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3.25rem;
   font-family: "Roboto", sans-serif;
-  color: #999999;
+  color: #ffffff;
   margin: 0;
   font-weight: 700;
   margin: 0.75rem 0 1.75rem 0;
   text-align: center; }
+  @media only screen and (min-width: 768px) {
+    h1 {
+      font-size: 3.75rem; } }
 
 h2 {
   font-size: 1.5rem;
   font-family: "Roboto", sans-serif;
-  color: #999999;
+  color: #ffffff;
   margin: 0;
   font-weight: 700;
   text-align: center;
@@ -197,7 +186,7 @@ h2 {
 h3 {
   font-size: 1.25rem;
   font-family: "Roboto", sans-serif;
-  color: #999999;
+  color: #ffffff;
   margin: 0;
   font-weight: 700;
   text-align: center;
@@ -206,7 +195,7 @@ h3 {
 h4 {
   font-size: 1.1rem;
   font-family: "Roboto", sans-serif;
-  color: #999999;
+  color: #ffffff;
   margin: 0;
   font-weight: 700;
   text-align: center;
@@ -215,7 +204,7 @@ h4 {
 h5 {
   font-size: 1.05rem;
   font-family: "Roboto", sans-serif;
-  color: #999999;
+  color: #ffffff;
   margin: 0;
   font-weight: 700;
   text-align: center; }
@@ -223,7 +212,7 @@ h5 {
 h6 {
   font-size: 1rem;
   font-family: "Roboto", sans-serif;
-  color: #999999;
+  color: #ffffff;
   margin: 0;
   font-weight: 700;
   text-align: center; }
@@ -247,33 +236,32 @@ a {
   margin-bottom: 1.25rem; }
   @media only screen and (min-width: 768px) {
     .card {
-      margin: 0rem 0rem 1.25rem 0rem; } }
+      margin: 0rem 0rem 1rem 0rem; } }
 
-/*.icon {
-  position: relative;
-  margin: 0 auto;
-  max-width: $icon-max-width;
-  padding-bottom: 1.25rem;
-}*/
 .sevice_description_title {
-  color: #e36a6b;
-  padding: 0 1.5rem;
+  color: #fdbb07;
+  padding: 0 1rem;
   text-align: left; }
 
 .sevice_description {
-  padding: 0 1.5rem; }
+  padding: 0 1rem; }
+
+.masthead_logo {
+  max-width: 5.5rem;
+  margin: 3rem auto 0.5rem auto;
+  padding: 0; }
 
 .offerings {
   margin: 0;
   padding: 0 0.25rem;
-  max-width: 1200px; }
+  margin: 1rem auto; }
   @media only screen and (min-width: 768px) {
     .offerings {
-      margin: 0 auto; } }
+      max-width: 1100px; } }
 
 .contact {
-  width: 80%;
+  width: 90%;
   text-align: center;
-  margin: 2rem auto;
+  margin: 3rem auto 2rem auto;
   border-top: 1px solid #36454f;
   padding-top: 2rem; }
