--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -11,9 +11,11 @@ $faded-red: #e36a6b;
 $yellow: #fdbb07;
 $gold: #faa81a;
 $gold-inverse-blue: #3681f7;
+$tactile-blue: #232932;
 
 // Global
-$body-background: #232932;
+//$body-background: $tactile-blue;
+
 
 // Atoms
 //$text-color: #999999;
