--- a/assets/scss/molecules/_card.scss
+++ b/assets/scss/molecules/_card.scss
@@ -10,11 +10,15 @@
 }
 
 .sevice_description_title {
-  color: $yellow;
-  padding: 0 1rem;
-  text-align: left;
+
+}
+
+.icon {
+  max-width: 18%;
+  padding: 0.5rem 1rem;
 }
 
 .sevice_description {
+   color: $tactile-blue;
   padding: 0 1rem;
 }
