--- a/assets/scss/atoms/_text.scss
+++ b/assets/scss/atoms/_text.scss
@@ -18,9 +18,8 @@ h1 {
 
 h2 {
     @include header(1.5rem);
-    text-align: center;
-    margin-top: 1.5rem 0;
-    line-height: 2.75rem;
+    text-align: left;
+    padding: 0 1rem;
 }
 
 h3 {
@@ -47,6 +46,6 @@ h6 {
 
 p {
     @extent %primary-font-regular;
-    font-size: 1rem;
+    font-size: 1.05rem;
     margin: 0.65rem 0;
 }
