--- a/assets/scss/helpers/_typography.scss
+++ b/assets/scss/helpers/_typography.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Cabin|Montserrat');
 
 // Font Sizes
 $base-font-size: 16px;
 
 // Font Families
 $primary-font: 'Open Sans', Helvetica, sans-serif;
-$secondary-font:'Roboto', sans-serif;
+$secondary-font:'Open Sans', sans-serif;
 
 %primary-font-regular {
     font-family: $primary-font;
